2004-07-31  Choe Hwanjin <krisna@kldp.org>
	* XIMPreeditNothing을 지원하기 위해 ic.c에서 gdk 함수를 직접 부르는
	  방식으로 변경함

2004-07-25  Choe Hwanjin <krisna@kldp.org>
	* 설정창 구현

2004-06-23  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: nabi_ic_commit_keyval() 함수에서 더이상 XIM_COMMIT을 사용
	하지 않고, 바로 key event를 forwarding하도록 수정함. 일부 프로그램에서
	하나의 이벤트에서 두번 commit하는 것을 받아들이지 못하는 듯함.
	ex) wine

2004-06-05  Choe Hwanjin <krisna@kldp.org>
	* src/server.h src/server/c src/ui.c src/nabi.h src/automata.h
	src/keyboard tables/compose/default configure.in: 키보드 테이블과
	컴포우즈 테이블을 위한 함수 nabi_server_load_keyboard_table(),
	nabi_server_load_compose_table()을 구현함. 더이상 ui.c에서 키보드와
	컴포우즈 테이블을 관리하지 않음. keyboard_map, compose_map에서
	keyboard_table, compose_table로 이름을 바꿈. compose table 포맷을
	변경

2004-04-23  Choe Hwanjin <krisna@kldp.org>
	* src/handler.c src/ic.c src/ic.h src/server.c src/server.h:
	  status window 콜백 함수를 구현함
	* src/server.c: 한영 전환키로 오른쪽 Alt를 추가

2004-04-19  Choe Hwanjin <krisna@kldp.org>
	* src/server.c: charset 체크하면서 ko로 시작하지 않으면 워닝을
	  출력하도록 함

2004-03-15  Choe Hwanjin <krisna@kldp.org>
	* release 0.13

2004-03-07  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: about 창 모양 개선
	* po/ko.po: 번역 업데이트

2004-03-05  Choe Hwanjin <krisna@kldp.org>
	* src/nabi.h src/main.c src/server.h src/server.c src/ui.c:
	xim_name이라는 컨피그 옵션과 --xim-name 이라는 커맨드 라인 옵션을
	추가함. 이것을 지정하면 XMODIFIER값을 다른 것을 사용할 수 있음

2004-03-01  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: GtkTextView를 사용하게 되면 GtkIMContext를 생성하게 되어
	XIM 서버가 멈추는 위험한 상황이 자주 발생하므로 About 창에서
	GtkTextView대신 GtkLabel를 사용하도록 수정함

2004-02-29  Choe Hwanjin <krisna@kldp.org>
	* IMdkit/i18nIc.c IMdkit/i18nMethod.c IMdkit/i18nPtHdr.c:
	바이트 오더 문제를 해결하기 위한 수정

2004-02-18  Choe Hwanjin <krisna@kldp.org>
	* GNU gettext 대신 glib gettext를 사용하도록 수정

2004-02-16  Choe Hwanjin <krisna@kldp.org>
	* src/candidate.c: 한자 선택창 페이지를 바꾸면서 화면에서 벗어나는
	  문제를 수정 (#300256)

2004-02-10  Choe Hwanjin <krisna@kldp.org>
	* IMdkit/Makefile.am src/Makefile.am: -Wall 컴파일 옵션 제거(#300245)
